--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -32,5 +32,6 @@ if (typeof(element) != 'undefined' && element != null)
 }
 </script>
 
+{% include pdf-carousel.html %}
 {% include analytics.html %}
 {% include /comments-providers/scripts.html %}
