--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -36,7 +36,7 @@
         alt="Teaser for {{ title }}">
       </div>
     {% else %}
-      <div class="d-none d-md-inline col-md-4">
+      <div class="d-inline mb-2 col-md-4">
       {% if thumbnail %}
         <img class="img-thumbnail p-2" style="background: {{ thumbnail_background | default: default }}" src=
         {% if thumbnail contains "://" %}
@@ -75,13 +75,13 @@
     
     <div class="mb-2">
     {% if post.duration %}
-    <div class="badge rounded-pill text-bg-dark"><i class="fa-solid fa-clock"></i> {{ post.duration }}</div>
+    <div class="badge rounded-pill text-bg-dark me-1"><i class="fa-solid fa-clock"></i> {{ post.duration }}</div>
     {% endif %}
     {% if post.date %}
-    <div class="badge rounded-pill text-bg-dark"><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></div>
+    <div class="badge rounded-pill text-bg-dark me-1"><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></div>
     {% endif %}
     {% if post.type %}
-    <div class="badge rounded-pill text-bg-dark"><i class="fa fa-fw fa-tag" aria-hidden="true"></i> {{ post.type }}</div>
+    <div class="badge rounded-pill text-bg-dark me-1"><i class="fa fa-fw fa-tag" aria-hidden="true"></i> {{ post.type }}</div>
     {% endif %}
     </div>
 
