--- a/_includes/pdf-carousel.html
+++ b/_includes/pdf-carousel.html
@@ -1,10 +1,6 @@
 <script type="module">
-    import pdfjsDist from 'https://cdn.jsdelivr.net/npm/pdfjs-dist@4.6.82/+esm'
+    import pdfjsDist from 'https://cdn.jsdelivr.net/npm/pdfjs-dist@4.6.82/+esm';
   
-    // If absolute URL from the remote server is provided, configure the CORS
-    // header on that server.
- 
-    // The workerSrc property shall be specified.
     pdfjsLib.GlobalWorkerOptions.workerSrc =
     "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.6.82/build/pdf.worker.min.mjs";
 
@@ -31,8 +27,6 @@
         var url = carousel.getAttribute('src');
         var canvas = document.createElement('canvas');
         var context = canvas.getContext('2d');
-    
-        // Asynchronous download of PDF
         var loadingTask = pdfjsLib.getDocument(url);
         loadingTask.promise.then(function(pdf) {
 
@@ -44,17 +38,12 @@
         }
       }
   
-        // Fetch the first page
         function renderPage(pageNumber) {
             pdf.getPage(pageNumber).then(function(page) {    
                 var scale = 1;
                 var viewport = page.getViewport({scale: scale});
-            
-                // Prepare canvas using PDF page dimensions
                 canvas.height = viewport.height;
                 canvas.width = viewport.width;
-            
-                // Render PDF page into canvas context
                 var renderContext = {
                     canvasContext: context,
                     viewport: viewport
@@ -78,7 +67,6 @@
         }
         renderPage(1);
         }, function (reason) {
-        // PDF loading error
         console.error(reason);
         });
     });
