Update papers and MSc thesis

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -107,6 +107,13 @@
 .page__teaser {
   text-align: center;
   margin-top: 3em;
+
+  img {
+    width: 100%;
+    max-height: 300px;
+    height: auto;
+    object-fit: contain; /* Ensures the full image is visible */
+  }
 }
 
 .page__content {
